# evaluations-and-alignment-book

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: notebooks.yml
notebooks/: ch01_intro.ipynb  ch02_bleu_rouge.ipynb  ch03_bertscore_comet.ipynb  ch04_llm_as_judge.ipynb  ch05_hallucinations.ipynb  ch06_rag_evaluation.ipynb  ch07_rlhf.ipynb  ch08_constitutional_ai.ipynb  ch09_red_teaming.ipynb  ch10_deliberative_alignment.ipynb  ch11_evolving_landscape.ipynb
