[project]
name = "eval-align-book"
version = "0.1.0"
description = "Companion repository for AI Evaluation and Alignments (Manning Seminal Papers Series)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "anthropic>=0.77.0",
    "bert-score>=0.3.13",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
